# claude-code

./: .gitignore  hashtag_injuries.py  index.html  nba_injuries_template.xlsx  nba_injury_README.md  nba_injury_clips.py  nba_injury_clips_batch.py  requirements.txt  test_nba_injury_clips.py  wrangler.jsonc
game/: _smoke.js  data.js  game.js  index.html  krystalle.js  story.js  styles.css
life/: .gitignore  index.html  package-lock.json  package.json  (+3 more)
nba-injury-analysis/: .gitignore  README.md  pyproject.toml
nba-injury-analysis/docs/: ARCHITECTURE.md  LABELING_GUIDE.md  LEGAL_LICENSING.md  METRIC_TAXONOMY.md
nba-injury-analysis/scripts/: run_pose_prototype.sh  verify_scaffold.py
nba-injury-analysis/src/nba_injury/: __init__.py  config.py
nba-injury-analysis/src/nba_injury/io/: __init__.py  storage.py  video.py
nba-injury-analysis/src/nba_injury/labeling/: __init__.py  export_tasks.py  import_labels.py  label_studio_config.xml
nba-injury-analysis/src/nba_injury/pipelines/: __init__.py
nba-injury-analysis/src/nba_injury/pipelines/phase_a_injury/: __init__.py  derived_signals.py  ingest.py  pose_estimation.py  run.py
nba-injury-analysis/src/nba_injury/pipelines/phase_b_baserates/: __init__.py  run.py
nba-injury-analysis/src/nba_injury/pipelines/phase_c_crossref/: __init__.py  exposure.py  models.py
nba-injury-analysis/src/nba_injury/schema/: __init__.py  enums.py  injury.py  labels.py  plays.py  pose.py
nba-injury-analysis/tests/: test_derived_signals.py  test_pose_smoke.py  test_schema.py
nba-injury-analysis/tests/fixtures/: .gitkeep
(+49 files in other folders)
