[project]
name = "nba-injury-analysis"
version = "0.1.0"
description = "Biomechanical analysis of NBA injuries: extract metrics from clips, measure base rates, and cross-reference for injury risk."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "polars>=0.20",
    "pyarrow>=15.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Heavy / network-dependent extras. Installed separately so the schema + stats
# layers can be developed and tested without pulling CV/video stacks.
cv = [
    "ultralytics>=8.2",      # YOLO-pose + tracking
    "opencv-python>=4.9",    # overlay rendering
    "decord>=0.6",           # fast seekable frame reads
]
stats = [
    "statsmodels>=0.14",
    "scipy>=1.12",
    "scikit-learn>=1.4",
]
labeling = [
    "label-studio>=1.11",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
nba-pose = "nba_injury.pipelines.phase_a_injury.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nba_injury"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
